# engels

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  GETTING_STARTED.md  INFRASTRUCTURE.md  Makefile  README.md  ROADMAP.md  docker-compose.yml  main.py  package.json  pyproject.toml  requirements-tests.txt
.github/workflows/: ci-cd.yml  ci.yml
backend/: Dockerfile  Dockerfile.worker  README.md
backend/cms/: Dockerfile  README.md
backend/cms/plugins/: README.md
backend/src/: __init__.py  celery_app.py  config.py  context_builder.py  database.py  entity_extractor.py  graph_builder.py  ingestion.py  main.py  models.py  rag_engine.py  schemas.py  search.py  tasks.py  vectorizer.py
backend/src/strapi_connector/: __init__.py  client.py  (+1 more)
backend/strapi/: Dockerfile  package.json
database/: init.sql
docs/: API.md  DATABASE_SCHEMA.md  ONBOARDING.md
frontend/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
k8s/: backend-deployment.yaml  backend-service.yaml  configmap.yaml  ingress.yaml  secret.yaml  worker-deployment.yaml
src/: config.py  main.py
src/api/: __init__.py  dependencies.py  deps.py  main.py
src/cms/: __init__.py  client.py  sync.py
src/core/: security.py
src/db/: session.py
src/models/: __init__.py
src/services/: __init__.py  audit_service.py  base.py  entity_service.py  relationship_service.py  source_service.py  user_service.py
tests/: __init__.py  test_ingestion.py  test_schemas.py  test_strapi_connector.py
tests/api/: test_integration.py
(+25 files in other folders)
