[project]
name = "engels-core"
version = "0.1.0"
description = "Computational core for historical-materialist analysis"
requires-python = ">=3.11"
dependencies = [
    "strapi-sdk-python>=2.0.0",
    "celery[redis]>=5.3.0",
    "redis>=5.0.0",
    "psycopg2-binary>=2.9.9",
    "pgvector>=0.2.4",
    "sqlalchemy>=2.0.23",
    "unstructured[pdf]>=0.11.0",
    "ollama>=0.1.7",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.25.0",
    "tenacity>=8.2.3",
    "structlog>=23.2.0",
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "testcontainers>=3.7.1",
    "ruff>=0.1.6",
    "black>=23.11.0",
    "mcp>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "ipykernel",
    "mypy",
]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["backend*"]
exclude = ["frontend*", "database*", "tests*"]
